--- a/index.html
+++ b/index.html
@@ -1,46 +1,34 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="/home/basecamp/Downloads/az_2.png">
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg"> -->
+    <center>
+        <link rel="shortcut icon" type="image/x-icon" href="/home/basecamp/Downloads/az_2.png">
+        <!-- <link rel="shortcut icon" type="image/x-icon" href="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg"> -->
+    </center>
 </head>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <title>Portfolio</title>
 <center>
-
-    </br>
-    </br>
-    </br>
-    </br>
     <img src="https://fontmeme.com/permalink/170920/b0688e8e58e1aac661e14abbca362988.png" alt="cool-fonts" border="0"></a>
-    </br>
-    </br>
-    </br>
-    </br><img src="https://fontmeme.com/permalink/170920/7095ad102c9c7cdb6558ed9478b5bd4c.png" alt="cool-fonts" border="0"></a>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    <img src="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg">
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
+    <figure>
+        <img src="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg">
+        <br /><br />
+        <figcaption>
+            <img src="https://fontmeme.com/permalink/170920/7095ad102c9c7cdb6558ed9478b5bd4c.png" alt="cool-fonts" border="0"></a>
+        </figcaption>
+    </figure>
 </center>
-<h1>&nbsp;&nbsp;&nbsp;&nbsp;ABOUT ME</h1>
-</br>
-<p>My name is Angel Zapata. I'm 18 years old. I'm from Tegucigalpa, Honduras. I lived in Atlanta for 3 years and then moved
-    to Memphis, TN. I stayed in Memphis from my 1st grade year to my 8th grade year, so I was basically raised in memphis.
-    I then moved to Oxford to attend my four years of high school in Oxford High. I'm bilingual, English and Spanish. I graduated
-    from Oxford high school, class of 2017. I started BaseCamp on June<sup>st</sup>, a week after my graduation. BaseCamp
-    is is a hands-on, challenging and fun program, designed to train us students to be software developers in 12 months.
-    I am very happy here at Base Camp.
-</p>
+
+<body>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;ABOUT ME</h1>
+    </br>
+    <p>My name is Angel Zapata. I'm 18 years old. I'm from Tegucigalpa, Honduras. I lived in Atlanta for 3 years and then moved
+        to Memphis, TN. I stayed in Memphis from my 1st grade year to my 8th grade year, so I was basically raised in memphis.
+        I then moved to Oxford to attend my four years of high school in Oxford High. I'm bilingual, English and Spanish.
+        I graduated from Oxford high school, class of 2017. I started BaseCamp on June<sup>st</sup>, a week after my graduation.
+        BaseCamp is is a hands-on, challenging and fun program, designed to train us students to be software developers in
+        12 months. I am very happy here at Base Camp.
+    </p>
+</body>
 
 </html>
