added more description boxes

--- a/index.html
+++ b/index.html
@@ -18,17 +18,40 @@
         </figcaption>
     </figure>
 </center>
+<hr>
 
 <body>
-    <h1>&nbsp;&nbsp;&nbsp;&nbsp;ABOUT ME</h1>
-    </br>
-    <p>My name is Angel Zapata. I'm 18 years old. I'm from Tegucigalpa, Honduras. I lived in Atlanta for 3 years and then moved
-        to Memphis, TN. I stayed in Memphis from my 1st grade year to my 8th grade year, so I was basically raised in memphis.
-        I then moved to Oxford to attend my four years of high school in Oxford High. I'm bilingual, English and Spanish.
-        I graduated from Oxford high school, class of 2017. I started BaseCamp on June<sup>st</sup>, a week after my graduation.
-        BaseCamp is is a hands-on, challenging and fun program, designed to train us students to be software developers in
-        12 months. I am very happy here at Base Camp.
-    </p>
+    <div class="about-me">
+        <div class="col-lg-3">
+            <center>
+                <h1>&nbsp;&nbsp;&nbsp;&nbsp;ABOUT ME</h1>
+            </center>
+            <p>My name is Angel Zapata. I'm 18 years old. I'm from Tegucigalpa, Honduras. I lived in Atlanta for 3 years and
+                then moved to Memphis, TN. I stayed in Memphis from my 1st grade year to my 8th grade year, so I was basically
+                raised in memphis. I then moved to Oxford to attend my four years of high school in Oxford High. I'm bilingual,
+                English and Spanish. I graduated from Oxford high school, class of 2017. I started BaseCamp on June<sup>st</sup>,
+                a week after my graduation. BaseCamp is is a hands-on, challenging and fun program, designed to train us
+                students to be software developers in 12 months. I am very happy here at Base Camp.
+            </p>
+        </div>
+    </div>
+    <div class="job-experience">
+        <div class="col-lg-3">
+            <center>
+                <h1>&nbsp;&nbsp;Job Experience</h1>
+            </center>
+            <p>I lofiajsg;oiggggggo;dsj;idsgf;ijdsa;ifjalirjglifdaaaaaaaaaaaahsfkf;kjlkdsajaijfdijsa;ijdaijgdjgfjdifaj</p>
+        </div>
+    </div>
+    <div class="plans-after">
+        <div class="col-lg-6">
+            <center>
+                <h1>&nbsp;&nbsp;Plans After Base Camp</h1>
+            </center>
+            <p>lkas;oissssssssssssslkdsj;lggggggggggggsd;gjsaoiiiiiiiiiiiilkgsaig;og
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
