Added another box and put input to my job exprience, and after base camp boxes

--- a/index.html
+++ b/index.html
@@ -26,31 +26,48 @@
             <center>
                 <h1>&nbsp;&nbsp;&nbsp;&nbsp;ABOUT ME</h1>
             </center>
-            <p>My name is Angel Zapata. I'm 18 years old. I'm from Tegucigalpa, Honduras. I lived in Atlanta for 3 years and
-                then moved to Memphis, TN. I stayed in Memphis from my 1st grade year to my 8th grade year, so I was basically
-                raised in memphis. I then moved to Oxford to attend my four years of high school in Oxford High. I'm bilingual,
-                English and Spanish. I graduated from Oxford high school, class of 2017. I started BaseCamp on June<sup>st</sup>,
-                a week after my graduation. BaseCamp is is a hands-on, challenging and fun program, designed to train us
-                students to be software developers in 12 months. I am very happy here at Base Camp.
+            <p>My name is Angel Zapata. I'm 18 years old. I'm from Tegucigalpa, Honduras. I lived in Atlanta, GA for 3 years
+                and then moved to Memphis, TN. I stayed in Memphis from my 1<sup>st</sup> grade year to my 8<sup>th</sup>                grade year, so I was basically raised in Memphis. I then moved to Oxford to attend my four years of high
+                school to graduate from Oxford High school, class of 2017. I'm bilingual, English and Spanish. I started
+                BaseCamp on June 1<sup>st</sup>, a week after my graduation. BaseCamp is a hands-on, challenging and fun
+                program, designed to train us students to be software developers in 12 months. I am very happy here at Base
+                Camp.
             </p>
         </div>
+        <img src="portfolio_graduation.jpg" align="right" id="graduation-pic">
     </div>
     <div class="job-experience">
         <div class="col-lg-3">
             <center>
                 <h1>&nbsp;&nbsp;Job Experience</h1>
             </center>
-            <p>I lofiajsg;oiggggggo;dsj;idsgf;ijdsa;ifjalirjglifdaaaaaaaaaaaahsfkf;kjlkdsajaijfdijsa;ijdaijgdjgfjdifaj</p>
+            <p>My mom taught me to value everyhting I have because nothing in this world is free. She taught me to value everything
+                by sending me to work with my step dad at a early age. When I started working, I was 13. I began working
+                on framing, flooring, and painting houses. When I first started with framing, I was extremely young; therefore,
+                I started off with picking up all the woods and trash around the area we were working at. From absorbing
+                the tasks the older workers were achieving, I learned how to use the circular saw to cut wood and the nail
+                gun. I've installed vinly flooring at The Domains in Oxford, MS. I then started working on painting. I liked
+                painting better because I found it easier and more satisfying. I've worked with OTP (Otis Terrell Painting)
+                for a year, and I am now currently a self-employed painter.
+            </p>
         </div>
     </div>
     <div class="plans-after">
-        <div class="col-lg-6">
+        <div class="col-lg-2">
             <center>
                 <h1>&nbsp;&nbsp;Plans After Base Camp</h1>
             </center>
-            <p>lkas;oissssssssssssslkdsj;lggggggggggggsd;gjsaoiiiiiiiiiiiilkgsaig;og
+            <p> After I graduate from Base Camp, I plan on working at a place where I will be happy. I plan on saving up my money
+                so that I will have enough to start my own business. I plan on doing house flipping after several years in
+                coding. Coding is my path way to be more successful and to lead me to become the person I truly want to be.
             </p>
         </div>
+    </div>
+    <div class="projects">
+        <center>
+            <h1>Base Camp Projects</h1>
+        </center>
+        <p>akldsjj;lihihs;klidshgi;saf oigfdsaghdhgkjgi;lkdjfs;i</p>
     </div>
 </body>
 
