I added my resume to my website

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 <link rel="stylesheet" href="style.css" type="text/css" />
 <title>Portfolio</title>
 <center>
-    <img src="https://fontmeme.com/permalink/170920/b0688e8e58e1aac661e14abbca362988.png" alt="cool-fonts" border="0"></a>
+    <img src="https://fontmeme.com/permalink/170920/b0688e8e58e1aac661e14abbca362988.png" alt="cool-fonts" border="0">
+    </a>
+    <div class="resume">
+        <a href="/home/basecamp/Downloads/Resume.pdf">My Resume</a>
+    </div>
     <figure>
         <img src="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg">
-        <br /><br />
+        <br />
+        <br />
         <figcaption>
-            <img src="https://fontmeme.com/permalink/170920/7095ad102c9c7cdb6558ed9478b5bd4c.png" alt="cool-fonts" border="0"></a>
+            <img src="https://fontmeme.com/permalink/170920/7095ad102c9c7cdb6558ed9478b5bd4c.png" alt="cool-fonts" border="0">
+            </a>
         </figcaption>
     </figure>
 </center>
@@ -27,11 +33,13 @@
                 <h1>&nbsp;&nbsp;&nbsp;&nbsp;ABOUT ME</h1>
             </center>
             <p>My name is Angel Zapata. I'm 18 years old. I'm from Tegucigalpa, Honduras. I lived in Atlanta, GA for 3 years
-                and then moved to Memphis, TN. I stayed in Memphis from my 1<sup>st</sup> grade year to my 8<sup>th</sup>                grade year, so I was basically raised in Memphis. I then moved to Oxford to attend my four years of high
-                school to graduate from Oxford High school, class of 2017. I'm bilingual, English and Spanish. I started
-                BaseCamp on June 1<sup>st</sup>, a week after my graduation. BaseCamp is a hands-on, challenging and fun
-                program, designed to train us students to be software developers in 12 months. I am very happy here at Base
-                Camp.
+                and then moved to Memphis, TN. I stayed in Memphis from my 1
+                <sup>st</sup> grade year to my 8
+                <sup>th</sup> grade year, so I was basically raised in Memphis. I then moved to Oxford to attend my four years
+                of high school to graduate from Oxford High school, class of 2017. I'm bilingual, English and Spanish. I
+                started BaseCamp on June 1
+                <sup>st</sup>, a week after my graduation. BaseCamp is a hands-on, challenging and fun program, designed to train
+                us students to be software developers in 12 months. I am very happy here at Base Camp.
             </p>
         </div>
         <img src="portfolio_graduation.jpg" align="right" id="graduation-pic">
@@ -41,7 +49,7 @@
             <center>
                 <h1>&nbsp;&nbsp;Job Experience</h1>
             </center>
-            <p>My mom taught me to value everyhting I have because nothing in this world is free. She taught me to value everything
+            <p>My mom taught me to value everything I have because nothing in this world is free. She taught me to value everything
                 by sending me to work with my step dad at a early age. When I started working, I was 13. I began working
                 on framing, flooring, and painting houses. When I first started with framing, I was extremely young; therefore,
                 I started off with picking up all the woods and trash around the area we were working at. From absorbing
@@ -67,7 +75,8 @@
         <center>
             <h1>Base Camp Projects</h1>
         </center>
-        <p>akldsjj;lihihs;klidshgi;saf oigfdsaghdhgkjgi;lkdjfs;i</p>
+        <p>Through-out this months in basecamp, we've learned plenty of coding. We have made a lot of projects to showcase our
+            skills. </p>
     </div>
 </body>
 
