I added my icon image inside my portfolio folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <center>
-        <link rel="shortcut icon" type="image/x-icon" href="/home/basecamp/Downloads/az_2.png">
+        <link rel="shortcut icon" type="image/x-icon" href="az_2.png">
         <!-- <link rel="shortcut icon" type="image/x-icon" href="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg"> -->
     </center>
 </head>
@@ -12,10 +12,10 @@
     <img src="https://fontmeme.com/permalink/170920/b0688e8e58e1aac661e14abbca362988.png" alt="cool-fonts" border="0">
     </a>
     <div class="resume">
-        <a href="/home/basecamp/Downloads/Resume.pdf">My Resume</a>
+        <a href="Resume.pdf">My Resume</a>
     </div>
     <figure>
-        <img src="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg">
+        <img src="class-of-2018.jpg">
         <br />
         <br />
         <figcaption>
