I added one of my python project and I will be adding more work to show my skills

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <html>
 
 <head>
-    <center>
-        <link rel="shortcut icon" type="image/x-icon" href="az_2.png">
-        <!-- <link rel="shortcut icon" type="image/x-icon" href="/home/basecamp/Pictures/Wallpapers/class-of-2018.jpg"> -->
-    </center>
+    <link rel="shortcut icon" type="image/x-icon" href="az_2.png">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <title>Portfolio</title>
 </head>
-<link rel="stylesheet" href="style.css" type="text/css" />
-<title>Portfolio</title>
 <center>
     <img src="https://fontmeme.com/permalink/170920/b0688e8e58e1aac661e14abbca362988.png" alt="cool-fonts" border="0">
     </a>
@@ -78,6 +75,11 @@
         <p>Through-out this months in basecamp, we've learned plenty of coding. We have made a lot of projects to showcase our
             skills. </p>
     </div>
+    <center>
+        <a href="https://asciinema.org/a/erVUSM4QIBMyA2hDWl8zDM54T" target="_blank">
+            <img src="https://asciinema.org/a/erVUSM4QIBMyA2hDWl8zDM54T.png" id="my-work" />
+        </a>
+    </center>
 </body>
 
 </html>
